# Project

./: CMakeLists.txt  Downloader.cpp  Downloader.h  DownloaderTest.cpp  File1.txt  File2.txt  File3.txt  File4.txt  FrameProgetto.cpp  FrameProgetto.h  GuiDownloader.cpp  GuiDownloader.h  Observer.h  README.md  Subject.h  Window.cpp  Window.h  main.cpp
test/: CMakeLists.txt  DownloaderTest.cpp
